Disable "pause" item in context menu for "Save Page As..." downloads.

BUG=618624

Review-Url: https://codereview.chromium.org/2623613009
Cr-Commit-Position: refs/heads/master@{#442740}

Former-commit-id: 63dcc86b88089a26a04bd3a55964f8c25df52b69